# BME680-Weather-Station

./: .cproject  .project  CMakeLists.txt  README.md  partitions_example.csv  sdkconfig  sdkconfig.old  tool_set_config.json
.metadata/: version.ini
.metadata/.plugins/org.eclipse.cdt.core/: BME680.1720544941275.pdom
.metadata/.plugins/org.eclipse.cdt.core/infoCache/BME680/: default.json
.metadata/.plugins/org.eclipse.cdt.ui/: cHelpSettings.xml
.metadata/.plugins/org.eclipse.core.resources/.projects/.org.eclipse.egit.core.cmp/: .location
.metadata/.plugins/org.eclipse.core.resources/.projects/BME680/: .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/BME680/.indexes/: history.index  properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/BME680/.indexes/6e/: history.index
.metadata/.plugins/org.eclipse.core.resources/.projects/BME680/.indexes/b9/: history.index
.metadata/.plugins/org.eclipse.core.resources/.root/: 6.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.debug.core/.launches/: BME680 Configuration.launch  BME680.launch
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
main/: CMakeLists.txt  led_builtin.c  led_builtin.h  main.c  timesetup.c  timesetup.h  wifi.c  wifi.h
spiffs_image/: index.html
(+136 files in other folders)
